# Hackthon-II-phase-1-console-todo-app

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/001-console-todo-app/: 0001-create-console-todo-app-spec.spec.prompt.md  0002-plan-console-todo-app-architecture.plan.prompt.md  0003-generate-console-todo-app-tasks.tasks.prompt.md  0004-implement-console-todo-app.green.prompt.md
history/prompts/constitution/: 0001-update-project-constitution.constitution.prompt.md
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo-app/checklists/: requirements.md
specs/001-console-todo-app/contracts/: operations.md
src/: main.py  task_manager.py
src/models/: task.py
tests/integration/: test_cli.py  test_cli_complete.py  test_cli_error_handling.py  test_cli_update_delete.py
tests/unit/: test_error_handling.py  test_task.py  test_task_manager.py  test_task_manager_delete.py  test_task_manager_list.py  test_task_manager_toggle.py  test_task_manager_update.py
